# tarregaSheets

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  dev.sh  docker-compose.yml  vercel.json
.husky/: post-commit
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  test_all_examples.py  test_conversion_queue.py  test_notation_detection.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: connection.py  schemas.py
backend/app/models/: __init__.py  conversion.py  piece.py  practice_stat.py
backend/app/routes/: conversions.py  files.py  health.py  pieces.py  upload.py
backend/app/services/: __init__.py  conversion_queue.py  converter.py  omr.py  openrouter.py  parser.py  sanitization_log.md  storage.py
backend/tests/: test_converter.py
docs/: ALPHATAB_ENHANCEMENT_PLAN.md
docs/_active/: README.md  execution.md  planning.md
docs/execution/: 2025-01-16-planning-doc-restructure.md
docs/features/tab-conversion/: conversion-tools.md  docker-setup.md
docs/phases/: phase1.md  phase2.md  phase3.md  phase4.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: alphatab-renderer.ts
frontend/src/pages/: HealthCheckPage.tsx  HomePage.tsx  LibraryPage.tsx  PracticePage.tsx  PracticePageAlphaTab.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: settingsStore.ts
frontend/src/types/: models.ts  piece.ts  upload.ts
frontend/src/utils/: logger.ts
(+18 files in other folders)
